# mandelbrot

./: CMakeLists.txt  CmakeLists.txt  README.md  main.cpp
lib/: log.cpp  log.h  main.cpp
lib/GLAD/: CMakeLists.txt
lib/GLAD/include/glad/: glad.h
lib/GLAD/src/: glad.c
res/Shaders/: fragment_shader.glsl  fragment_shader.txt  vertex_shader.glsl  vertex_shader.txt
src/: AlphaWinMain.cpp  WinMain.cpp  WinMain.h  WinMain_B_NoSSE.cpp  main.cpp
src/Patcher/: Patcher.cpp
src/resource-manager/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/resource-manager/src/: murmurhash.cpp  murmurhash.h  resource_manager.cpp  resource_manager.h  shader_handler.cpp  shader_handler.h
